--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,16 +1,49 @@
-<h1>Mi Carrito</h1>
+<main class="container mt-4">
+  <h1>Mi Carrito</h1>
 
-<div class="product-container">
-  {{#each products}}
-    <div class="card">
-      <strong>{{this.product.title}}</strong>
-      <p><b>Cantidad:</b> {{this.quantity}}</p>
-      <p><b>Precio:</b> ${{this.product.price}}</p>
-      <button onclick="removeFromCart('{{this.product._id}}')">Eliminar</button>
+  {{#if products.length}}
+    <div class="table-responsive">
+      <table class="table table-bordered align-middle">
+        <thead class="table-dark">
+          <tr>
+            <th>Imagen</th>
+            <th>Producto</th>
+            <th>Precio</th>
+            <th>Cantidad</th>
+            <th>Subtotal</th>
+            <th>Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          {{#each products}}
+            <tr>
+              <td><img src="{{#if this.product.thumbnail}}{{this.product.thumbnail}}{{else}}https://via.placeholder.com/80x60{{/if}}" alt="{{this.product.title}}" width="80" height="60"/></td>
+              <td>{{this.product.title}}</td>
+              <td>${{this.product.price}}</td>
+              <td>{{this.quantity}}</td>
+              <td>${{multiply this.product.price this.quantity}}</td>
+              <td>
+                <button class="btn btn-danger btn-sm" onclick="removeFromCart('{{this.product._id}}')">Eliminar</button>
+              </td>
+            </tr>
+          {{/each}}
+        </tbody>
+        <tfoot>
+          <tr>
+            <td colspan="4" class="text-end"><strong>Total</strong></td>
+            <td colspan="2"><strong>${{cartTotal products}}</strong></td>
+          </tr>
+        </tfoot>
+      </table>
     </div>
-  {{/each}}
-</div>
-
+    <div class="d-flex justify-content-end gap-2 mt-4">
+      <button class="btn btn-danger" onclick="clearCart()">Vaciar Carrito</button>
+      <button class="btn btn-success" onclick="purchaseCart()">Finalizar Compra</button>
+    </div>
+  {{else}}
+    <div class="alert alert-info text-center mt-4">Tu carrito está vacío.</div>
+  {{/if}}
+</main>
 
 <script>
   function removeFromCart(productId) {
@@ -22,3 +55,4 @@
     });
   }
 </script>
+
